Fix align for desktop ver

--- a/style.css
+++ b/style.css
@@ -795,10 +795,6 @@ ul {
   margin: 10px;
 }
 
-#popup {
-  align-items: center;
-}
-
 .popup-window {
   display: none;
   flex-direction: column;
@@ -893,6 +889,7 @@ ul {
     border-style: solid;
     border-width: 30px;
     border-color: #1a2236;
+    align-items:unset;
   }
 
   .close-btn {
